syntax = "proto3";

message Ich9LpcState {
  message Apm {
    uint32  control         = 1;
    uint32  status          = 2;
  }

  Apm       apm             = 1;
}
